--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
 baseurl: / # Change this to your relative path (ex: /blog/), or leave just a /
 markdown: kramdown
 source: .
-destination: ./_site
+destination: ./
 permalink: /:title
 paginate: 8
 paginate_path: /page:num/
